kubernetes/mini/apps/monitoring/kromgo/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      io.kubernetes.pod.namespace: monitoring
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kromgo
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP
